--- a/page2.html
+++ b/page2.html
@@ -44,43 +44,70 @@
   </div>
 </main>
 
-<script>
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-import { getFirestore, collection, addDoc } from "firebase/firestore"; // ✅ Firestore 추가
+<script type="module">
+  /***** ▼ Firebase 초기 설정 ▼ *****/
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
 
-// Your web app's Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
-  authDomain: "to-be-a-master.firebaseapp.com",
-  projectId: "to-be-a-master",
-  storageBucket: "to-be-a-master.firebasestorage.app",
-  messagingSenderId: "223906864735",
-  appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
-  measurementId: "G-SXF1BMH4DB"
-};
+  const firebaseConfig = {
+    apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
+    authDomain: "to-be-a-master.firebaseapp.com",
+    projectId: "to-be-a-master",
+    storageBucket: "to-be-a-master.firebasestorage.app",
+    messagingSenderId: "223906864735",
+    appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
+    measurementId: "G-SXF1BMH4DB"
+  };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  /***** ▲ Firebase 설정 끝 ▲ *****/
 
-// ✅ Firestore 초기화
-const db = getFirestore(app);
+  /***** ▼ 페이지 설정 ▼ *****/
+  const PAGE = 2;
+  const NEXT_PAGE_URL = "page3.html";
+  /***** ▲ 설정 끝 ▲*****/
 
-// ✅ Firestore에 데이터 저장 함수
-export async function saveData(data) {
-  try {
-    await addDoc(collection(db, "responses"), {
-      ...data,
-      timestamp: new Date()
+  (function(){
+    const qs = new URLSearchParams(location.search);
+    const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
+    const nextBtn = document.getElementById('nextBtn');
+    let sending = false;
+
+    // ✅ Firestore에 세션 정보 저장
+    async function sessionUpsert() {
+      try {
+        await addDoc(collection(db, "responses"), {
+          pid,
+          page: PAGE,
+          answers: [],
+          timestamp: new Date()
+        });
+        console.log("✅ Firestore 저장 완료 (page 2)");
+      } catch (e) {
+        console.error("❌ Firestore 저장 실패:", e);
+      }
+    }
+
+    nextBtn.addEventListener('click', async () => {
+      if (sending) return;
+      sending = true;
+      nextBtn.disabled = true;
+
+      await sessionUpsert();
+
+      const next = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
+      location.href = next;
     });
-    console.log("✅ Firestore에 데이터 저장 성공");
-  } catch (e) {
-    console.error("❌ Firestore 저장 실패:", e);
-  }
-}
 
+    // ✅ 페이지 닫기 대비 sendBeacon은 Firestore에서는 불필요하지만,
+    // 단순 로깅 용도로 남기고 싶다면 Firestore에 비동기 추가 가능
+    window.addEventListener('beforeunload', () => {
+      // Firestore는 navigator.sendBeacon으로 직접 호출 불가능함.
+      // 따라서 별도 처리가 필요하지만, 여기선 생략 가능.
+    });
+  })();
 </script>
+
 </body>
 </html>
