--- a/page9.html
+++ b/page9.html
@@ -40,14 +40,29 @@
   </div>
 </div>
 
-<script>
-/***** ▼ 설정 ▼ *****/
-const API = "https://script.google.com/macros/s/AKfycbxhI7GJJI2jebIWhxr_3nkvvYStEtzNjFZpUuIezsnNKd7G1Mf8emvyrW_AJUsZNg2U/exec";
+<script type="module">
+/***** ▼ Firebase 초기 설정 ▼ *****/
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
+  authDomain: "to-be-a-master.firebaseapp.com",
+  projectId: "to-be-a-master",
+  storageBucket: "to-be-a-master.firebasestorage.app",
+  messagingSenderId: "223906864735",
+  appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
+  measurementId: "G-SXF1BMH4DB"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+/***** ▲ Firebase 설정 끝 ▲*/
+
 const PAGE = 9;
 const NEXT_PAGE_URL = "page10.html";
 const DISPLAY_MS = 45000; // 45초
-const STIM_KEY = "P8_POST_1"; // 분석용 식별자
-/***** ▲ 설정 끝 ▲ *****/
+const STIM_KEY = "P8_POST_1";
 
 const text = `정신질환자들은 솔직히 사회에서는 짐이지.
 약 먹으면서도 일도 제대로 못하고, 주변 사람까지 힘들게 만드니까.
@@ -80,11 +95,27 @@ const text = `정신질환자들은 솔직히 사회에서는 짐이지.
   document.getElementById('commentCnt').textContent = counts.comment.toLocaleString();
   document.getElementById('saveCnt').textContent = counts.save.toLocaleString();
 
+  // Firestore 저장
+  async function saveToFirestore(answers){
+    if(!pid) return;
+    try{
+      await addDoc(collection(db, "responses"), {
+        pid,
+        page: PAGE,
+        answers,
+        timestamp: new Date()
+      });
+      console.log("✅ Firestore 저장 완료 (page 9)");
+    }catch(e){
+      console.error("❌ Firestore 저장 실패:", e);
+    }
+  }
+
   // 페이지 노출 기록
-  sessionUpsert([
+  saveToFirestore([
     { key: 'P8_STIM_KEY', value: STIM_KEY },
     { key: 'P8_SHOWN_MS', value: String(DISPLAY_MS) }
-  ]).catch(console.warn);
+  ]);
 
   // 진행바 및 타이머
   const bar = document.getElementById('bar');
@@ -98,36 +129,19 @@ const text = `정신질환자들은 솔직히 사회에서는 짐이지.
     }
   }, 1000);
 
-  // 안전한 리디렉션 함수
+  // 안전한 리디렉션
   async function redirect(){
-    try {
-      // 업서트 후 0.2초 대기
-      await sessionUpsert([]);
+    try{
+      // 기록 후 200ms 대기
+      await saveToFirestore([]);
       await new Promise(r => setTimeout(r, 200));
-    } catch(e){ console.warn(e); }
+    }catch(e){ console.warn(e); }
 
-    const next = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
-    location.href = next;
+    location.href = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
   }
 
-  // 공통 업서트 함수
-  async function sessionUpsert(answers){
-    const payload = { type:'SESSION_UPSERT', pid, page: PAGE, answers };
-    await fetch(API, {
-      method: 'POST',
-      headers: { 'Content-Type':'text/plain' },
-      body: JSON.stringify(payload)
-    });
-  }
-
-  // 페이지 종료 대비 sendBeacon 백업
-  window.addEventListener('beforeunload', () => {
-    try {
-      const payload = JSON.stringify({ type:'SESSION_UPSERT', pid, page: PAGE, answers: [] });
-      navigator.sendBeacon(API, new Blob([payload], { type:'text/plain' }));
-    } catch(e) {}
-  });
 })();
 </script>
+
 </body>
 </html>
