--- a/page10.html
+++ b/page10.html
@@ -130,7 +130,7 @@ const db = getFirestore(app);
 /***** ▲ Firebase 설정 끝 ▲*/
 
 const PAGE = 10;               // 페이지 번호
-const NEXT_PAGE_URL = "end.html"; // 다음 페이지
+const NEXT_PAGE_URL = "page11.html"; // 다음 페이지
 const DISPLAY_MS = 30000;        // 30초 예시
 const STIM_KEY = "P9_POST_1";    // 분석용 식별자
 
